# gemini-mcp

./: README.md  __init__.py  pyproject.toml  server.py
